--- a/popup.html
+++ b/popup.html
@@ -91,7 +91,7 @@
     }
     .log-entry {
       padding: 5px;
-      border-bottom: 1px solid #f3e8e8;
+      border-bottom: 1px solid #eee;
       font-family: monospace;
       font-size: 12px;
     }
